<resources>
    <string name="app_name">Counter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_restart">Restart</string>
    <string name="action_edit">Edit</string>
    <string name="action_settings">Settings</string>

    <string name="menu_add">Add counter</string>

    <string name="text_counter">0</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
</resources>