<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_restart"
        android:enabled="true"
        android:icon="@drawable/icon_restart"
        android:title="@string/action_restart"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_edit"
        android:enabled="true"
        android:icon="@drawable/icon_edit"
        android:title="@string/action_edit"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>